change body text color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
   --color-green: #3bae52;
   --color-lightgray: #80828b;
   --color-headertext: #171c2f;
-  --color-bodytext: #5e6471;
+  --color-bodytext: #3d494f;
   --color-graybg: #f6f6f6;
 }
 
