--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -8,7 +8,7 @@
 
 body {
   color: var(--color-bodytext);
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.6;
@@ -27,6 +27,7 @@ h6 {
   font-weight: 700;
   line-height: 1.4;
   color: var(--color-headertext);
+  letter-spacing: -0.025em;
 }
 
 h1 {
